Bug 1287215: Replace preferences gDirty global with a callback. r=aklotz,Gijs

MozReview-Commit-ID: 7m5d5ddMTva